@@ -34,3 +34,7 @@ FILE *open_file(const char *file_name,const char *mode);
 void init_regex(sg_regex *regex_t, const char *regex_string);
 void execute_regex(sg_regex *regex_t,const char *string);
 void free_regex(sg_regex *regex_t);
+void create_dir_structure(const char *dir_name);
+/* generate an md5sum of filehandle */
+void gen_md5_sum_of_file(FILE *f,char *result_sum);
+
