@@ -124,6 +124,7 @@ int get_mirror_data_from_source(FILE *fh,int use_curl_dl_stats,const char *base_
 	strncpy(url,base_url,strlen(base_url) );
 	url[ strlen(base_url) ] = '\0';
 	strncat(url,filename,strlen(filename) );
+
 	return_code = download_data(fh,url,0,use_curl_dl_stats);
 
 	free(url);
@@ -147,19 +148,7 @@ int download_pkg(const rc_config *global_config,pkg_info_t *pkg){
 	chdir(pkg->location);
 
 	/* build the file name */
-	file_name = calloc(
-		strlen(pkg->name)+strlen("-")+strlen(pkg->version)+strlen(".tgz") + 1 ,
-		sizeof *file_name
-	);
-	if( file_name == NULL ){
-		fprintf(stderr,_("Failed to calloc %s\n"),"file_name");
-		exit(1);
-	}
-	file_name = strncpy(file_name,pkg->name,strlen(pkg->name));
-	file_name[ strlen(pkg->name) ] = '\0';
-	file_name = strncat(file_name,"-",strlen("-"));
-	file_name = strncat(file_name,pkg->version,strlen(pkg->version));
-	file_name = strncat(file_name,".tgz",strlen(".tgz"));
+	file_name = gen_pkg_file_name(pkg);
 
 	/* if we can open the file, gen the md5sum and stat for the file size */
 	if( ( fh_test = fopen(file_name,"r") ) != NULL){
@@ -194,20 +183,7 @@ int download_pkg(const rc_config *global_config,pkg_info_t *pkg){
 	}
 
 	/* build the url */
-	url = calloc(
-		strlen(pkg->mirror) + strlen(pkg->location)
-			+ strlen(file_name) + strlen("/") + 1,
-		sizeof *url
-	);
-	if( url == NULL ){
-		fprintf(stderr,_("Failed to calloc %s\n"),"url");
-		exit(1);
-	}
-	url = strncpy(url,pkg->mirror,strlen(pkg->mirror));
-	url[ strlen(pkg->mirror) ] = '\0';
-	url = strncat(url,pkg->location,strlen(pkg->location));
-	url = strncat(url,"/",strlen("/"));
-	url = strncat(url,file_name,strlen(file_name));
+	url = gen_pkg_url(pkg);
 
 	if( global_config->dl_stats == 1 ){
 		printf(_("Downloading %s %s %s [%dK]...\n"),pkg->mirror,pkg->name,pkg->version,pkg->size_c - (f_size/1024));
@@ -312,144 +288,5 @@ int download_pkg(const rc_config *global_config,pkg_info_t *pkg){
 	chdir(global_config->working_dir);
 	free(file_name);
 	return 0;
-}
-
-void gen_md5_sum_of_file(FILE *f,char *result_sum){
-	EVP_MD_CTX mdctx;
-	const EVP_MD *md;
-	unsigned char md_value[EVP_MAX_MD_SIZE];
-	int md_len, i;
-	ssize_t getline_read;
-	size_t getline_size;
-	char *result_sum_tmp = NULL;
-	char *getline_buffer = NULL;
-
-	md = EVP_md5();
- 
-	EVP_MD_CTX_init(&mdctx);
-	EVP_DigestInit_ex(&mdctx, md, NULL);
-
-	rewind(f);
-
-	while( (getline_read = getline(&getline_buffer, &getline_size, f)) != EOF )
-		EVP_DigestUpdate(&mdctx, getline_buffer, getline_read);
-
-	free(getline_buffer);
-
-	EVP_DigestFinal_ex(&mdctx, md_value, (unsigned int*)&md_len);
-	EVP_MD_CTX_cleanup(&mdctx);
-
-	result_sum[0] = '\0';
-	
-	for(i = 0; i < md_len; i++){
-		char *p = malloc( sizeof *p * 3 );
-
-		if( snprintf(p,3,"%02x",md_value[i]) > 0 ){
-
-			if( (result_sum_tmp = strncat(result_sum,p,3)) != NULL )
-				result_sum = result_sum_tmp;
-
-		}
-
-		free(p);
-	}
-
-}
-
-/* recursively create dirs */
-void create_dir_structure(const char *dir_name){
-	char *cwd = NULL;
-	int position = 0;
-
-	cwd = getcwd(NULL,0);
-	if( cwd == NULL ){
-		fprintf(stderr,_("Failed to get cwd\n"));
-		return;
-	}else{
-		#if DEBUG == 1
-		fprintf(stderr,_("\tCurrent working directory: %s\n"),cwd);
-		#endif
-	}
-
-	while( position < (int) strlen(dir_name) ){
-
-		char *pointer = NULL;
-		char *dir_name_buffer = NULL;
-
-		/* if no more directory delim, then this must be last dir */
-		if( strstr(dir_name + position,"/" ) == NULL ){
-
-			dir_name_buffer = calloc( strlen(dir_name + position) + 1 , sizeof *dir_name_buffer );
-			strncpy(dir_name_buffer,dir_name + position,strlen(dir_name + position));
-			dir_name_buffer[ strlen(dir_name + position) ] = '\0';
-
-			if( strcmp(dir_name_buffer,".") != 0 ){
-				if( (mkdir(dir_name_buffer,0755)) == -1){
-					#if DEBUG == 1
-					fprintf(stderr,_("Failed to mkdir: %s\n"),dir_name_buffer);
-					#endif
-				}else{
-					#if DEBUG == 1
-					fprintf(stderr,_("\tCreated directory: %s\n"),dir_name_buffer);
-					#endif
-				}
-				if( (chdir(dir_name_buffer)) == -1 ){
-					fprintf(stderr,_("Failed to chdir to %s\n"),dir_name_buffer);
-					return;
-				}else{
-					#if DEBUG == 1
-					fprintf(stderr,_("\tchdir into %s\n"),dir_name_buffer);
-					#endif
-				}
-			}/* don't create . */
-
-			free(dir_name_buffer);
-			break;
-		}else{
-			if( dir_name[position] == '/' ){
-				/* move on ahead */
-				++position;
-			}else{
-
-				/* figure our dir name and mk it */
-				pointer = strchr(dir_name + position,'/');
-				dir_name_buffer = calloc(
-					strlen(dir_name + position) - strlen(pointer) + 1 , sizeof *dir_name_buffer
-				);
-				strncpy(dir_name_buffer,dir_name + position, strlen(dir_name + position) - strlen(pointer));
-				dir_name_buffer[ (strlen(dir_name + position) - strlen(pointer)) ] = '\0';
-
-				if( strcmp(dir_name_buffer,".") != 0 ){
-					if( (mkdir(dir_name_buffer,0755)) == -1 ){
-						#if DEBUG == 1
-						fprintf(stderr,_("Failed to mkdir: %s\n"),dir_name_buffer);
-						#endif
-					}else{
-						#if DEBUG == 1
-						fprintf(stderr,_("\tCreated directory: %s\n"),dir_name_buffer);
-						#endif
-					}
-					if( (chdir(dir_name_buffer)) == -1 ){
-						fprintf(stderr,_("Failed to chdir to %s\n"),dir_name_buffer);
-						return;
-					}else{
-						#if DEBUG == 1
-						fprintf(stderr,_("\tchdir into %s\n"),dir_name_buffer);
-						#endif
-					}
-				} /* don't create . */
-
-				free(dir_name_buffer);
-				position += (strlen(dir_name + position) - strlen(pointer));
-			}
-		}
-	}/* end while */
-
-	if( (chdir(cwd)) == -1 ){
-		fprintf(stderr,_("Failed to chdir to %s\n"),cwd);
-		return;
-	}
-
-	free(cwd);
 }
 
