@@ -1,5 +1,7 @@
 
 0.9.8e May 24, 2004
+ * moved create_dir_structure() and gen_md5_sum_of_file() and to common.[ch]
+ * created gen_pkg_file_name() and gen_pkg_url() functions
  * tightened up scope on some variables
  * pkg_action_show no longer uses a temp pkg_info_t, just 2 char *
  * updated FAQ, added question about mirroring and bash tab completion
